[gd_scene load_steps=35 format=2]

[ext_resource path="res://sprite/Enemy/cat/Dead (10).png" type="Texture" id=1]
[ext_resource path="res://sprite/Enemy/cat/Dead (3).png" type="Texture" id=2]
[ext_resource path="res://sprite/Enemy/cat/Dead (6).png" type="Texture" id=3]
[ext_resource path="res://sprite/Enemy/cat/Dead (1).png" type="Texture" id=4]
[ext_resource path="res://sprite/Enemy/cat/Idle (4).png" type="Texture" id=5]
[ext_resource path="res://sprite/Enemy/cat/Dead (2).png" type="Texture" id=6]
[ext_resource path="res://sprite/Enemy/cat/Idle (1).png" type="Texture" id=7]
[ext_resource path="res://sprite/Enemy/cat/Idle (5).png" type="Texture" id=8]
[ext_resource path="res://sprite/Enemy/cat/Idle (10).png" type="Texture" id=9]
[ext_resource path="res://sprite/Enemy/cat/Idle (2).png" type="Texture" id=10]
[ext_resource path="res://sprite/Enemy/cat/Dead (4).png" type="Texture" id=11]
[ext_resource path="res://sprite/Enemy/cat/Idle (3).png" type="Texture" id=12]
[ext_resource path="res://sprite/Enemy/cat/Idle (9).png" type="Texture" id=13]
[ext_resource path="res://sprite/Enemy/cat/Dead (9).png" type="Texture" id=14]
[ext_resource path="res://sprite/Enemy/cat/Idle (8).png" type="Texture" id=15]
[ext_resource path="res://sprite/Enemy/cat/Dead (7).png" type="Texture" id=16]
[ext_resource path="res://sprite/Enemy/cat/Dead (8).png" type="Texture" id=17]
[ext_resource path="res://sprite/Enemy/cat/Idle (7).png" type="Texture" id=18]
[ext_resource path="res://sprite/Enemy/cat/Dead (5).png" type="Texture" id=19]
[ext_resource path="res://sprite/Enemy/cat/Idle (6).png" type="Texture" id=20]
[ext_resource path="res://script/Cat.gd" type="Script" id=21]
[ext_resource path="res://sprite/Enemy/cat/Walk (7).png" type="Texture" id=22]
[ext_resource path="res://sprite/Enemy/cat/Walk (8).png" type="Texture" id=23]
[ext_resource path="res://sprite/Enemy/cat/Walk (6).png" type="Texture" id=24]
[ext_resource path="res://sprite/Enemy/cat/Walk (4).png" type="Texture" id=25]
[ext_resource path="res://sprite/Enemy/cat/Walk (9).png" type="Texture" id=26]
[ext_resource path="res://sprite/Enemy/cat/Walk (1).png" type="Texture" id=27]
[ext_resource path="res://sprite/Enemy/cat/Walk (3).png" type="Texture" id=28]
[ext_resource path="res://sprite/Enemy/cat/Walk (5).png" type="Texture" id=29]
[ext_resource path="res://sprite/Enemy/cat/Walk (2).png" type="Texture" id=30]
[ext_resource path="res://sprite/Enemy/cat/Walk (10).png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 31 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 3 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 1 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 130.374, 154.411 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 88.4212, 22.5597 )

[node name="Cat" type="Node2D"]
script = ExtResource( 21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="Dano" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dano"]
position = Vector2( -20.9763, 61.4306 )
shape = SubResource( 2 )

[node name="Morte" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Morte"]
position = Vector2( -20.9763, -133.349 )
shape = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Dano" to="." method="_on_Dano_body_entered"]
[connection signal="body_entered" from="Morte" to="." method="_on_Morte_body_entered"]
